--- a/index.html
+++ b/index.html
@@ -7,7 +7,77 @@
     <link rel="stylesheet" href="./styles/main.css">
   </head>
   <body>
-    <h1>Hello Mate Academy</h1>
-    <script type="text/javascript" src="scripts/main.js"></script>
+    <header class="header">
+      <nav class="nav">
+        <img
+          src="images/header/logo.png"
+          alt="Potr pots logo"
+          class="logo"
+        >
+        <ul class="nav__list">
+          <li class="nav__item">
+            <a class="nav__link" href="#">Basket</a>
+          </li>
+          <li class="nav__item">
+            <a class="nav__link" href="#">Features</a>
+          </li>
+          <li class="nav__item">
+            <a class="nav__link" href="#">About us</a>
+          </li>
+          <li class="nav__item">
+            <a class="nav__link" href="#">Materials</a>
+          </li>
+          <li class="nav__item">
+            <a class="nav__link" href="#">Message us</a>
+          </li>
+          <li class="nav__mobile-close nav__item">
+             X  —————— CLOSE
+          </li>
+        </ul>
+        <a href="#">
+          <img
+            class="nav__bag"
+            src="images/header/bag.png"
+            alt="basket"
+          >
+        </a>
+        <img
+          src="images/header/menu_icon.svg"
+          alt="Potr pots"
+          class="nav__mobile-button"
+        >
+      </nav>
+      <div class="header__row">
+        <div class="header__row-left">
+          <a href="#" class="header__row-left-link">
+            <img
+              src="images/header/More.png"
+              alt="More about potr pots"
+            >
+            <img src="images/header/Arrow.png" alt="arrow-down">
+          </a>
+        </div>
+        <div class="header__row-center">
+          <img
+            src="images/header/slogan.png"
+            class="header__img"
+            alt="poter self origami plant pots"
+          >
+          <p class ="price"><strong>$ 7,5</strong><br>Get the second order <br> in half price</p>
+          <button class="button button__buy">
+            Buy now&nbsp  &nbsp ——
+          </button>
+
+        </div>
+        <div class="header__row-right">
+          <img
+            src="images/header/header-img.png"
+            class="header__img"
+            alt="cactus"
+          >
+        </div>
+      </div>
+    </header>
+    <script type="text/javascript" src="scripts/nav.js"></script>
   </body>
 </html>
