--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
           class="nav__mobile-button"
         >
       </nav>
-      <div class="header__row">
-        <div class="header__row-left">
-          <a href="#" class="header__row-left-link">
+      <div class="header__row header-content">
+        <div class="header-content__left">
+          <a href="#" class="header__row-left-link  header-content__left-link">
             <img
               src="images/header/More.png"
               alt="More about potr pots"
@@ -57,27 +57,163 @@
             <img src="images/header/Arrow.png" alt="arrow-down">
           </a>
         </div>
-        <div class="header__row-center">
+        <div class="header-content__center">
           <img
             src="images/header/slogan.png"
-            class="header__img"
+            class="header-content__img"
             alt="poter self origami plant pots"
           >
           <p class ="price"><strong>$ 7,5</strong><br>Get the second order <br> in half price</p>
           <button class="button button__buy">
-            Buy now&nbsp  &nbsp ——
+            Buy now&nbsp  &nbsp ——&gt;
           </button>
 
         </div>
-        <div class="header__row-right">
+        <div class="header-content__right">
           <img
             src="images/header/header-img.png"
-            class="header__img"
+            class="header-content__img"
             alt="cactus"
           >
         </div>
       </div>
     </header>
+    <section class="description">
+      <h2>For whom?</h2>
+      <div class="description__row-top">
+        <img
+          class = "description__main-img"
+          src="images/descr/Rectangle 3.png"
+          alt="pot image"
+        >
+        <div>
+          <h3>/For those who <br>value durable things</h3>
+          <p>
+            Don’t worry if you happen to knock your POTR on the floor, unlike a
+            traditional ceramic pot it will take the fall in its stride.
+          </p>
+        </div>
+      </div>
+      <div class="description__row-down descr-down">
+        <div class="descr-down__left">
+          <img
+            class = "descr-down__img descr-down__img--small"
+            src="images/descr/Rectangle 3.2.png"
+            alt="art image"
+          >
+          <h3>/For those who <br>value durable things</h3>
+          <p> Don’t worry if you happen to knock your POTR on <br>the floor, unlike a
+            traditional ceramic pot it will take <br>the fall in its stride.</p>
+        </div>
+        <div class="descr-down__right">
+          <img
+            class = "descr-down__img descr-down__img--big"
+            src="images/descr/Rectangle 3.1.png"
+            alt="cactus in the spot"
+          >
+          <h3>/For those who <br>value durable things</h3>
+          <p> Don’t worry if you happen to knock your POTR on <br>the floor, unlike a
+            traditional ceramic pot it will take <br>the fall in its stride.</p>
+        </div>
+      </div>
+    </section>
+    <section class="features">
+      <img
+        src="images/features/POTR Pots Features.png"
+        class ="features__main-title"
+        alt="Potr features"
+      >
+      <div class="features__container">
+        <div class="features__item">
+          <img
+            class="features__img"
+            src="images/features/image 4.png"
+            alt="delivery image"
+          >
+          <h4 class="features__title">Fla pack post </h4>
+          <p class="features__text">
+            The pots will be shipped flat packed so
+            they can be slipped through your letter box
+          </p>
+        </div>
+        <div class="features__item">
+          <img
+            class="features__img"
+            src="images/features/image 4-2.png"
+            alt="material image"
+          >
+          <h4 class="features__title">Easy assembly</h4>
+          <p class="features__text">
+            POTR Pots are super easy (and super satisfying)
+            to assemble using the quick draw cotton cord
+          </p>
+        </div>
+        <div class="features__item">
+          <img
+            class="features__img"
+            src="images/features/Assemble-string-2.png"
+            alt="easy using picture"
+          >
+          <h4 class="features__title">Self-watering</h4>
+          <p class="features__text">
+            Simply add water into the pot — if your plant
+            is thirsty it will automatically start drinking!
+          </p>
+        </div>
+      </div>
+    </section>
+    <section class="team">
+      <h2 class="team__title">Meet the potr team!</h2>
+      <img
+        src="images/team/Martin.png"
+        alt="Martin"
+        class="team__big-word--1"
+      >
+      <div class="team__container">
+        <p class="team__text">
+          Andy and Martin are experienced product br designers with
+          a love of plants and the environment. They have over ten years combined
+          industry experience in bringing products to market at some of the worlds
+          largest consumer product companies. <br><br>
+
+          Having studied Product Design Engineering together at the Glasgow School
+          of Art, they have a long history of working as a team on a variety of
+          design projects.
+        </p>
+        <img
+          class="team__main-img"
+          src="images/team/6c0ba6d87c4006eb81022f6e4e410e06_original.png"
+          alt="photo of founders"
+        >
+      </div>
+      <img
+        src="images/team/Andy.png"
+        alt="Andy"
+        class="team__big-word--2"
+      >
+    </section>
+    <section class="materials">
+      <img
+        src="images/materials/Materials and Features.png"
+        class="materials__title"
+        alt="materials"
+      >
+      <div class="materials__container">
+        <p class="materials__text">
+          <strong>Environmentally friendly</strong> <br>
+          <br>All materials used in our pots are made from 100% recycled materials
+          and are <strong> 100% recyclable </strong>at the end of life (should you ever choose
+          to get rid of your POTR!). All materials have been sourced from within
+          Europe to reduce our carbon footprint when transporting the raw materials,
+           and all manufacturing is carried out in the UK.
+        </p>
+        <p class="materials__text">
+          We have chosen Bobbiny recycled cotton cord to use as our draw string
+          and wicking cord. Not only is it 100% recycled, it looks great and works
+          really well at wicking water.
+        </p>
+      </div>
+    </section>
     <script type="text/javascript" src="scripts/nav.js"></script>
   </body>
 </html>
