--- a/index.html
+++ b/index.html
@@ -224,12 +224,89 @@
     <section class="pots-size">
       <h2 class="pots-size__title">Which size POTR for my house plant ? </h2>
       <div class="pots-size__container">
-        <div class="pots-size__text"></div>
+        <div class="pots-size__fragment fragment">
+          <div class="fragment__column">
+            <div class="fragment__text">
+              <p>Pre potted plants come in fairly standard sized pots, and can be
+                classified into one of two categories:</p>
+            </div>
+            <div class="fragment__line"></div>
+            <div class="fragment__text">
+              <h5>Large</h5>
+              <p>Large POTR Pot = 14cm diameter (1.5 litre) house plant pot or less</p>
+              <h5>Small</h5>
+              <p>Small POTR Pot = 10cm diameter (0.49 litre) house plant pot or less</p>
+            </div>
+          </div>
+          <div class="fragment__row">
+            <p>
+              POTR Pots have a little bit of give around the top rim so can fit
+              slightly larger sizes than the recommended sizes stated above if
+              necessary.
+            </p>
+          </div>
+        </div>
+
         <img
           src="images/size/size.png"
           alt="image with size"
-          class="pots-size__img"
+          class="pots-size__img">
+      </div>
+    </section>
+    <section class="extra">
+      <div class="extra__photos">
+        <img
+          src="images/extra/Rectangle 5-6.png"
+          alt=""
+          class="extra__img"
         >
+
+        <img
+          src="images/extra/Rectangle 5-5.png"
+          alt=""
+          class="extra__img"
+        >
+        <img
+          src="images/extra/Rectangle 5-4.png"
+          alt=""
+          class="extra__img"
+        >
+        <img
+          src="images/extra/Rectangle 5-3.png"
+          alt=""
+          class="extra__img"
+        >
+        <img
+          src="images/extra/Rectangle 5-2.png"
+          alt=""
+          class="extra__img"
+        >
+        <img
+          src="images/extra/Rectangle 5.png"
+          alt=""
+          class="extra__img"
+        >
+      </div>
+      <div class="extra__container">
+        <div class="extra__item-container">
+          <div class="extra__item">
+            <h6>• Easy assembly</h6>
+            <p>Pull the draw string to assemble!</p>
+          </div>
+          <div class="extra__item">
+            <h6>• Flat pack postage </h6>
+            <p>POTR pots arrive flat packed in an envelope!</p>
+          </div>
+          <div class="extra__item">
+            <h6>• Self-watering</h6>
+            <p>Add water to POTR and watch your plant drink!</p>
+          </div>
+        </div>
+        <button class="button extra__button">Buy now ---- </button>
+        <div class="extra__sale">
+          <h3 class="extra__percent">50% off</h3>
+          <h5 class="extra__text">Get the second order in half price</h5>
+        </div>
       </div>
     </section>
     <script type="text/javascript" src="scripts/nav.js"></script>
