--- a/index.html
+++ b/index.html
@@ -309,6 +309,73 @@
         </div>
       </div>
     </section>
+    <footer class="footer container" id="contact">
+      <div class="footer__container">
+        <div class="footer__left">
+          <h3 class="footer__title">have any questions?</h3>
+          <p>Here few ways to get in touch with us:</p>
+          <form
+            class="form"
+            action="#"
+            method="GET"
+            autocomplete="off"
+          >
+            <label>
+              <input
+                class="form__input"
+                type="text"
+                placeholder="Your name"
+                name="name"
+              >
+            </label>
+            <label>
+              <input
+                class="form__input"
+                type="email"
+                placeholder="Your email"
+                name="mail"
+              >
+            </label>
+
+            <label>
+              <input
+                class="form__input"
+                type="email"
+                placeholder="Message"
+                name="message"
+              >
+            </label>
+          </form>
+          <button class="submit-button"><strong>submit</strong></button>
+        </div>
+        <div class="footer__right">
+          <div class="footer__part ">
+            <h5 class="footert__text">Our phone</h5>
+            <a class= "footer__link" href="tel:+7 098 454 56 34">+7 098 454 56 34</a>
+          </div>
+          <div class="footer__part ">
+            <h5 class="footer__text">our email</h5>
+            <a
+              class= "footer__link"
+              href="https://www.google.com/maps/place/%D0%A4%D0%BB%D0%BE%D1%80%D0%B8%D0%B4%D0%B0,+%D0%A1%D0%A8%D0%90/@27.5946799,-83.804601,6z/data=!4m2!3m1!1s0x88c1766591562abf:0xf72e13d35bc74ed0"
+              target="blank"
+            >
+              potrpots@gmail.com
+            </a>
+          </div>
+          <div class="footer__wrap">
+            <h5 class="footer__text">Our office</h5>
+            <a
+              class= "footer__link"
+              href="https://www.google.com/maps/place/%D0%A4%D0%BB%D0%BE%D1%80%D0%B8%D0%B4%D0%B0,+%D0%A1%D0%A8%D0%90/@27.5946799,-83.804601,6z/data=!4m2!3m1!1s0x88c1766591562abf:0xf72e13d35bc74ed0"
+              target="blank"
+            >
+              United Kingdom  99 Staple Hill Road, Bristol, BS16 5AD
+            </a>
+          </div>
+        </div>
+      </div>
+    </footer>
     <script type="text/javascript" src="scripts/nav.js"></script>
   </body>
 </html>
