--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@
               <img src="../images/footer/Vector-7.png" alt="">
             </a>
           </div>
-          <img src="../images/header/logo.png" alt="Potr pots logo" class="logo">
+          <img src="images/header/logo.png" alt="Potr pots logo" class="logo">
         </div>
         <div class="footer__wrap">
           <a
