--- a/index.html
+++ b/index.html
@@ -380,7 +380,12 @@
       </div>
       <div class="footer__row">
         <div class="footer__wrap">
-          <a href="#"  class= "footer__link" ><strong>Adress</strong></p>
+          <a
+            href="https://www.google.com/maps/place/%D0%A4%D0%BB%D0%BE%D1%80%D0%B8%D0%B4%D0%B0,+%D0%A1%D0%A8%D0%90/@27.5946799,-83.804601,6z/data=!4m2!3m1!1s0x88c1766591562abf:0xf72e13d35bc74ed0"
+            class= "footer__link"
+          >
+            <strong>Adress</strong>
+          </a>
           <a
             class= "footer__link"
             href="https://www.google.com/maps/place/%D0%A4%D0%BB%D0%BE%D1%80%D0%B8%D0%B4%D0%B0,+%D0%A1%D0%A8%D0%90/@27.5946799,-83.804601,6z/data=!4m2!3m1!1s0x88c1766591562abf:0xf72e13d35bc74ed0"
@@ -394,16 +399,20 @@
         <div class="footer__wrap">
           <div class="footer__icon-cont">
             <a href="" class="footer__icon">
-              <img src="../images/footer/icons8-instagram-50.png" alt="">
+              <img src="../images/footer/icons8-instagram-50.png" alt="facebook">
             </a>
             <a href="" class="footer__icon">
-              <img src="../images/footer/Vector-8.png" alt="">
+              <img src="../images/footer/Vector-8.png" alt="instagram">
             </a>
             <a href="" class="footer__icon">
-              <img src="../images/footer/Vector-7.png" alt="">
+              <img src="../images/footer/Vector-7.png" alt="twitter">
             </a>
           </div>
-          <img src="images/header/logo.png" alt="Potr pots logo" class="logo">
+          <img
+            src="images/header/logo.png"
+            alt="Potr pots logo"
+            class="logo"
+          >
         </div>
         <div class="footer__wrap">
           <a
