--- a/index.html
+++ b/index.html
@@ -399,13 +399,13 @@
         <div class="footer__wrap">
           <div class="footer__icon-cont">
             <a href="" class="footer__icon">
-              <img src="../images/footer/icons8-instagram-50.png" alt="facebook">
+              <img src="images/footer/icons8-instagram-50.png" alt="facebook">
             </a>
             <a href="" class="footer__icon">
-              <img src="../images/footer/Vector-8.png" alt="instagram">
+              <img src="images/footer/Vector-8.png" alt="instagram">
             </a>
             <a href="" class="footer__icon">
-              <img src="../images/footer/Vector-7.png" alt="twitter">
+              <img src="images/footer/Vector-7.png" alt="twitter">
             </a>
           </div>
           <img
